--- a/portfolio/.gitignore
+++ b/portfolio/.gitignore
@@ -17,6 +17,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
+
+# add fire.env to gitignore
+fire.env
 
 npm-debug.log*
 yarn-debug.log*
